--- a/client/src/components/webar/style.css
+++ b/client/src/components/webar/style.css
@@ -1,13 +1,16 @@
+/* .ARView {
+    margin-top: 50px;
+} */
+
 model-viewer {
     background-color: #eee;
     overflow-x: hidden;
     --poster-color: #eee;
-    width: 600px;
-    height: 400px;
+    width: 60vw;
+    height: 80vh;
     border: 1px solid;
     border-radius: 10px;
-    margin-top: 80px;
-    margin-left: 30px;
+    margin: 0px 25px;
 }
 
 .arbutton {
