--- a/client/src/components/webar/style.css
+++ b/client/src/components/webar/style.css
@@ -72,3 +72,9 @@ model-viewer > #ar-prompt {
 model-viewer > #ar-prompt > img {
     animation: circle 4s linear infinite;
 }
+
+@media screen and (max-width: 600px) {
+    model-viewer {
+        margin: 2    
+    }
+}
